--- a/Webapp/public/admin/public/index.html
+++ b/Webapp/public/admin/public/index.html
@@ -29,12 +29,12 @@
             manifest.json provides metadata used when your web app is added to the
             homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
         -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/Mango.ico" />
     <link
-      rel="apple-touch-icon"
+      rel="Mango icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
+      href="%PUBLIC_URL%/Mango.png"
     />
     <!--
             Notice the use of %PUBLIC_URL% in the tags above.
@@ -56,7 +56,7 @@
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-    <title>Paper Dashboard React by Creative Tim</title>
+    <title>Mango-Admin</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
